# git-moat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
completions/: _git-moat  git-moat.bash
scripts/: install.sh
src/: main.rs
src/adapters/: local_git.rs  local_sanitizer.rs  mod.rs  threat_analyzer.rs
src/domain/: mod.rs  service.rs  threat.rs
src/domain/rules/: binding_gyp.rs  build_hooks.rs  cursor_rules.rs  git_history.rs  mod.rs  package_json.rs  session_hooks.rs  setup_js.rs  vscode_tasks.rs
src/ports/: analyzer.rs  git.rs  mod.rs  sanitizer.rs
tests/: integration.rs
